capa/v33.2.0/README.md
# :zap: Giant Swarm Release v33.2.0 for CAPA :zap:

<< Add description here >>

## Changes compared to v33.1.3

### Components

- cluster-aws from v6.4.3 to v7.2.5
- Flatcar from v4459.2.1 to [v4459.2.2](https://www.flatcar.org/releases/#release-4459.2.2)
- Kubernetes from v1.33.6 to [v1.33.7](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.33.md#v1.33.7)
- os-tooling from v1.26.2 to v1.26.4

### cluster-aws [v6.4.3...v7.2.5](https://github.com/giantswarm/cluster-aws/compare/v6.4.3...v7.2.5)

#### :warning: Breaking Changes

- The following IAM permissions have been removed from the control plane nodes
- autoscaling:SetDesiredCapacity
- autoscaling:TerminateInstanceInAutoScalingGroup
- Removed `global.providerSpecific.reducedInstanceProfileIamPermissionsForWorkers` value, as that's the default behavior now. It cannot be overridden anymore.

#### Added

- Add `kubernetes.io/cluster/$clusterName: "owned"` and `sigs.k8s.io/cluster-api-provider-aws/cluster/$clusterName: "owned"` tags to the `IRSAClaim` CR so that resources created by Crossplane contain the expected tags. This also allows to find the S3 buckets that need to be deleted when removing a cluster.
- *This change will roll the control plane nodes* Add `preKubeadmCommand` to wait for the API server load balancer DNS to be resolvable before running kubeadm on control plane nodes. This prevents kubeadm from failing when the ELB DNS record hasn't propagated yet.
- *This change will roll the nodes* Add Crossplane IAM Roles, policies and instance profiles for worker and control plane nodes. Instead of having an IAM Role per node pool, now we'll use the same for all node pools.
- Add the `priority-classes` default app, enabled by default. This app provides standardised `PriorityClass` resources like `giantswarm-critical` and `giantswarm-high`, which should replace the previous inconsistent per-app priority classes.
- *This change will roll the nodes on Karpenter node pools* Attach the `lb` Security Group to Karpenter nodes.
- *This change will roll the nodes on Karpenter node pools* Name instance on AWS after the nodepool name.

#### Changed

- Chart: Update `cluster` to v5.1.2.
- Chart: Update `cluster` to v5.1.1.
- Chart: Update `cluster` to v5.1.0.
- Chart: Update `cluster` to v5.0.0.
- Reduce redundant parts of JSON schema for Karpenter vs. MachinePool types of node pools
- Adjust node max pods based on the `nodeCidrMaskSize`

#### Fixed

- Fix Karpenter schema definition: changed from `app` schema to `helmRelease` schema to correctly reflect that Karpenter is deployed as a HelmRelease resource. This fixes incorrect field definitions in `extraConfigs` (capitalized enum values `ConfigMap`/`Secret` and `optional` field instead of `priority`).
- Fix Karpenter NodePool subnet filtering: when users define custom `subnetTags`, the default `giantswarm.io/role: "nodes"` filter is no longer applied, allowing full control over subnet selection. The cluster ownership tag (`sigs.k8s.io/cluster-api-provider-aws/cluster/<cluster-name>: owned`) is still enforced for security.
- Fix Karpenter HelmRelease: add missing `valuesFrom` parent field for `extraConfigs`, enabling customers to use custom ConfigMaps and Secrets for Karpenter configuration.
- Ensure `AWSCluster.spec.network.subnets.tags` is not rendered as `null`
- Add missing documentation for node pools (health checks were not listed)
- Ensure defaulting `maxHealthyPercentage` since Helm does not use the default from the schema

#### Removed

- Remove `RolePolicyAttachment` crossplane custom resources as they are not needed when using `Role` and `RolePolicy`.

### Apps

- aws-ebs-csi-driver from v3.3.0 to v4.0.3
- cert-exporter from v2.9.14 to v2.9.15
- cilium from v1.3.2 to v1.3.4
- cloud-provider-aws from v1.33.2-1 to v2.0.0
- coredns from v1.28.3 to v1.29.1
- etcd-defrag from v1.2.3 to v1.2.4
- etcd-k8s-res-count-exporter from v1.10.11 to v1.10.12
- external-dns from v3.2.0 to v3.4.0
- k8s-audit-metrics from v0.10.10 to v0.10.11
- network-policies from v0.1.1 to v0.1.3
- node-exporter from v1.20.9 to v1.20.10
- observability-bundle from v2.3.2 to v2.5.0
- security-bundle from v1.15.0 to v1.16.1

### aws-ebs-csi-driver [v3.3.0...v4.0.3](https://github.com/giantswarm/aws-ebs-csi-driver-app/compare/v3.3.0...v4.0.3)

#### Added

- Introduce bundle chart architecture with Crossplane IAM resources.
  - Add `aws-ebs-csi-driver-app-bundle` chart that includes:
- Crossplane IAM Role with EBS CSI driver permissions
- Flux HelmRelease to deploy the workload cluster chart
- ConfigMap for values passthrough
  - Bundle chart is installed on the management cluster and deploys the app chart to the workload cluster
  - IAM role uses OIDC federation (IRSA) and reads configuration from `<clusterID>-crossplane-config` ConfigMap
  - Both charts share the same version and are released together

#### Changed

- Remove dependency for the cloud-provider-aws in the aws-ebs-csi-driver HelmRelease. That dependency should be set in the bundle HelmRelease by the provider cluster chart
- Update CircleCI configuration to push both app and bundle charts
- Update README with bundle architecture documentation

#### Fixed

- Fix boolean type of the expansion
- Allow volume expansion by default on gp3

### cert-exporter [v2.9.14...v2.9.15](https://github.com/giantswarm/cert-exporter/compare/v2.9.14...v2.9.15)

#### Changed

- Go: Update dependencies.

### cilium [v1.3.2...v1.3.4](https://github.com/giantswarm/cilium-app/compare/v1.3.2...v1.3.4)

#### Changed

- Upgrade Cilium to [v1.18.6](https://github.com/cilium/cilium/releases/tag/v1.18.6).
- Upgrade Cilium to [v1.18.5](https://github.com/cilium/cilium/releases/tag/v1.18.5).

### cloud-provider-aws [v1.33.2-1...v2.0.0](https://github.com/giantswarm/aws-cloud-controller-manager-app/compare/v1.33.2-1...v2.0.0)

#### Changed

- Chart: Update to upstream v1.34.0.

### coredns [v1.28.3...v1.29.1](https://github.com/giantswarm/coredns-app/compare/v1.28.3...v1.29.1)

#### Changed

- Update `coredns` image to [1.14.1](https://github.com/coredns/coredns/releases/tag/v1.14.1).
- Update `coredns` image to [1.14.0](https://github.com/coredns/coredns/releases/tag/v1.14.0).

### etcd-defrag [v1.2.3...v1.2.4](https://github.com/giantswarm/etcd-defrag-app/compare/v1.2.3...v1.2.4)

#### Changed

- Chart: Update dependency ahrtr/etcd-defrag to v0.37.0. ([#78](https://github.com/giantswarm/etcd-defrag-app/pull/78))

### etcd-k8s-res-count-exporter [v1.10.11...v1.10.12](https://github.com/giantswarm/etcd-kubernetes-resources-count-exporter/compare/v1.10.11...v1.10.12)

#### Changed

- Go: Update dependencies.

### external-dns [v3.2.0...v3.4.0](https://github.com/giantswarm/external-dns-app/compare/v3.2.0...v3.4.0)

#### Changed

- Sync to upstream helm chart [1.20.0](https://github.com/kubernetes-sigs/external-dns/releases/tag/external-dns-helm-chart-1.20.0).
  - Add option to set annotationPrefix.
  - Fixed the missing schema for .provider.webhook.serviceMonitor configs.
  - Fixed incorrect indentation of selector labels under spec.template.spec.topologySpreadConstraints when topologySpreadConstraints is set.
- Use kubectl-apply-job when installing CRDs.
- Upgrade external-dns to v0.20.0.
- Update DNSEndpoints CRD.
- Sync to upstream helm chart `1.19.0`.
  - Grant `discovery.k8s.io/endpointslices` permission only when using `service` source.
  - Update RBAC for `Service` source to support `EndpointSlices`.
  - Allow extraArgs to also be a map enabling overrides of individual values.
  - Set defaults for `automountServiceAccountToken` and `serviceAccount.automountServiceAccountToken` to `true` in Helm chart values.
  - Correctly handle `txtPrefix` and `txtSuffix` arguments when both are provided.
  - Add ability to generate schema with `helm plugin schema`.
  - Regenerate JSON schema with `helm-values-schema-json' plugin.
  - Added ability to configure `imagePullSecrets` via helm `global` value.
  - Added options to configure `labelFilter` and `managedRecordTypes` via dedicated helm values.
  - Allow templating `serviceaccount.annotations` keys and values, by rendering them using the `tpl` built-in function.
  - Added support for `extraContainers` argument.
  - Added support for setting `excludeDomains` argument.
  - Added support for setting `dnsConfig`.
  - Added support for webhook providers.
- Restrict managed record types to A and CNAME.

### k8s-audit-metrics [v0.10.10...v0.10.11](https://github.com/giantswarm/k8s-audit-metrics/compare/v0.10.10...v0.10.11)

#### Changed

- Go: Update dependencies.

### network-policies [v0.1.1...v0.1.3](https://github.com/giantswarm/network-policies-app/compare/v0.1.1...v0.1.3)

#### Added

- Add support for Kamaji.

#### Fixed

- Fixed broken templating.

### node-exporter [v1.20.9...v1.20.10](https://github.com/giantswarm/node-exporter-app/compare/v1.20.9...v1.20.10)

#### Removed

- Repository: Remove integration tests.

### observability-bundle [v2.3.2...v2.5.0](https://github.com/giantswarm/observability-bundle/compare/v2.3.2...v2.5.0)

#### Added

- Add KSM metrics `kube_servicemonitor_info` and `kube_podmonitor_info` for ServiceMonitor and PodMonitor resources
- Add KSM metrics `kube_podlog_info` for PodLog resource

#### Changed

- Upgrade `kube-prometheus-stack-app` to 19.0.0
- Update alloy-app to 0.16.0
  - Bumps alloy to 1.12.0

#### Fixed

- Fixed KSM metrics for endpoints

### security-bundle [v1.15.0...v1.16.1](https://github.com/giantswarm/security-bundle/compare/v1.15.0...v1.16.1)

#### Changed

- Add missing dependency to all apps.
- Allow to set multiple dependencies on the depends-on annotation.
- Rename `edgedb` to `gel`.
- Update `cloudnative-pg` (app) to v0.0.12.
- Update `gel` (app) to v1.0.1.
